fix to input box on iPhone

--- a/styles.css
+++ b/styles.css
@@ -50,13 +50,14 @@ h2 {
     border-radius: 5px;
 }
 input {
-    width: calc(100% - 22px);
-    padding: 14px;
+    width: 100%;
+    padding: 10px;
     margin-top: 20px;
     border: 1px solid #ddd;
     border-radius: 10px;
-    font-size: 16px;
+    font-size: 18px;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
 }
 button {
     width: 100%;
